<resources>
    <string name="app_name">Presidential Speeches</string>
    <string name="action_settings">Settings</string>

    <!-- Title Screen -->

    <string name="app_title">Famous Presidential Speeches</string>
    <string name="capitol_image">https://upload.wikimedia.org/wikipedia/commons/d/d7/Photograph_of_the_U.S._Capitol_and_the_Inaugural_platform_during_ceremonies_marking_the_Inauguration_of_Dwight_D...._-_NARA_-_200417.jpg</string>

    <!-- Speech List Screen -->

    <string name="instructions">Select a speech to play:</string>
    <string name="now_playing">Now Playing -></string>

    <string name="title_col_hdr">Title</string>
    <string name="orator_col_hdr">Orator</string>
    <string name="year_col_hdr">Year</string>
    <string name="length_col_hdr">Length</string>

    <string name="message_empty">Waiting to load table of speeches...</string>

    <string name="help_button">Help</string>
    <string name="help_text">Click on a row in the table to play a speech. Click on a column heading to re-sort the table by that column.</string>
    <string name="credits_button">Credits</string>

    <!-- Speech Player Screen -->

    <string name="portrait_desc">Portrait of speaker</string>
    <string name="start_service">org.swain.asa.famous_pres_speeches.service.MY_SERVICE</string>
    <string name="loading">Loading...</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="pause_button">Pause</string>
    <string name="play_button">Play</string>
    <string name="stop_button">Stop</string>
    <string name="volume">Volume:</string>

    <string name="show_speech_text">Show Speech Text</string>
    <string name="show_wikipedia">Show Wikipedia Page</string>

    <string name="rewind_button">Rewind\n15 Sec</string>
    <string name="fast_forward_button">Forward\n15 Sec</string>

    <string name="portrait_loading_title">Loading Portrait For Speech</string>
    <string name="wikipedia_loading_title">Loading Wikipedia Page For Speech</string>
    <string name="loading_message">Please Wait</string>
    <string name="title_activity_player">Speech Player</string>

    <!-- Credit Screen -->
    <string name="credits_title">Credits:</string>
    <string name="credits1">Android application written by Asa Swain</string>
    <string name="credits2">Audio recordings and transcripts come from www.americanrhetoric.com</string>
    <string name="credits3">All images come from www.wikimedia.org</string>

    <!-- Speeches SQL Table Data -->
    <string name="sql_table_name">speeches</string>
    <string name="sql_title_column">title</string>
    <string name="sql_orator_column">orator</string>
    <string name="sql_year_column">year</string>
    <string name="sql_length_column">length</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_speech_text">SpeechTextActivity</string>
</resources>
