<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/instructions"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:text="@string/instructions" />

            <Button
                android:id="@+id/nowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textSize="12sp"
                android:text="@string/now_playing"
                android:layout_gravity="end"
                android:textColor="@color/white"
                android:background="@color/light_red"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleColumnHeading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textStyle="bold"
                android:background="@color/light_blue"
                android:layout_marginBottom="5dp"
                android:text="@string/title_col_hdr"/>

            <TextView
                android:id="@+id/oratorColumnHeading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:textStyle="bold"
                android:background="@color/medium_blue"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:text="@string/orator_col_hdr"/>

            <TextView
                android:id="@+id/yearColumnHeading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textStyle="bold"
                android:background="@color/dark_blue"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:text="@string/year_col_hdr"/>

        </LinearLayout>

        <!-- This ListView is displayed when the table contains records. -->

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/helpButton"
                android:text="@string/help_button"
                android:background="@color/dark_red"
                android:textColor="@color/white"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <!-- This TextView is displayed when the table contains no records. -->

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/message_empty"/>

</RelativeLayout>
